app/assets/stylesheets/components/_favorite_card.scss
.required.favorite-notes {
  margin: 0
}

.favorite-notes-input.form-control {
  color: $deep-navy;
  font-size: 0.5rem;
  background-color: $light-gray;
  padding: 0;
  resize: none;
  overflow-y: auto;
  border-color: transparent;
  height: 40px;
}

.favorite-notes-input.form-control:focus {
  box-shadow: none;
  border-color: $dark-goldenrod;
}

.favorite-notes-input.is-valid {
  background-image: none;
}

